<resources>
    <string name="app_name">Deliverable2</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin_create_service">AdminCreateService</string>
    <string name="title_activity_admin_account_manage">AdminAccountManage</string>
    <string name="car_rental">Car rental</string>
    <string name="activate_service">Activate service</string>
    <string name="deactivate_service">Deactivate service</string>
    <string name="moving_assistance">Moving assistance:</string>
    <string name="enter_hourly_rate">Enter hourly rate</string>
    <string name="truck_rental">Truck rental:</string>
    <string name="address">Address</string>
    <string name="start_time">Start time</string>
    <string name="add">add</string>
    <string name="end_time">End time</string>
</resources>