<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtManageServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="12sp"
        android:text="Manage services"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/customborder"
            android:clipToPadding="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewCarRental"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_rental"
                android:textColor="#675E5E"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/hourRate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_hourly_rate"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                android:singleLine="false"
                android:text="0"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/service1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/customborder"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewTruckRental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/truck_rental"
                android:textColor="#675E5E"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/hourRate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_hourly_rate"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="0" />

            <Button
                android:id="@+id/service2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/customborder"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMovingAssistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/moving_assistance"
                android:textColor="#675E5E"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/hourRate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_hourly_rate"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="0" />

            <Button
                android:id="@+id/service3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>