<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAccountManager">

    <LinearLayout
        android:id="@+id/mainFiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#000fff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textColor="#000fff"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinDays"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:layout_width="fill_parent">

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="startingTimeOnClick"
                android:text="select" />

            <EditText
                android:id="@+id/editStartTime"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_toStartOf="@id/Button01"
                android:clickable="false"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="#000fff"
                android:textStyle="bold"
                android:layout_alignEnd="@id/editStartTime"
                android:text="@string/start_time" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:layout_width="fill_parent">

            <Button
                android:id="@+id/btnAddEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="endTimeOnClick"
                android:text="select" />

            <EditText
                android:id="@+id/editEndTime"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_toStartOf="@id/btnAddEndTime"
                android:clickable="false"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/workingHourEnd"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_alignEnd="@id/editEndTime"
                android:layout_alignParentStart="true"
                android:text="@string/end_time"
                android:textColor="#000fff"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/serviceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Service type"
                android:textColor="#000fff"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinServices"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchOnClick"
            android:text="Search" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clearOnClick"
            android:text="Clear" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ListView
                android:id="@+id/branchesList"
                android:layout_width="match_parent"
                android:layout_height="531dp" >

            </ListView>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>